--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
         <div class="col-md-6">
             <p class="about-text lead mb-4 text-start">
             Our team are Louisiana natives and appreciate the rich environment that a Bayou provides. As a company, we want to offer that same level of value to the trade industry ecosystem.
-            We are more than a website company; we provide websites, business intelligence services, cloud computing advice, and cybersecurity risk assessments. 
+            We are more than a website company; we provide websites, business intelligence services, and cloud computing advice. 
             We are here to help you grow your business. As a small business ourselves, we understand the challenges you face and aim to help you succeed in the digital world.
           </p>
           <ul class="about-values list-unstyled">
@@ -138,7 +138,7 @@
                         <p class="team-member-bio">
                           With 10+ years of development experience, Paul creates custom web solutions for your business, generates data-driven 
                           decision-making recommendations that can help you make informed choices for your business, help you migrate to the Cloud, 
-                          and/or reduce your cybersecurity risk.
+                          and grow.
                         </p>
                       </figcaption>
                     </figure>
