added head and google analytics

--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
         }
     </style>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6MH8EEN7M9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6MH8EEN7M9');
+</script>
 <body>
   <nav class="navbar navbar-expand-lg" aria-label="Main navigation">
     <div class="container-fluid">
@@ -134,6 +143,8 @@
       </div>
     </div>
   </section>
+
+  
   
   <!-- Testimonials Section -->
   <section class="testimonials-section py-5" aria-labelledby="testimonials-heading">
@@ -295,7 +306,6 @@
           }
         }
       });
-    </script>
     
 </body>
 </html>
