--- a/index.html
+++ b/index.html
@@ -550,6 +550,65 @@
   
   <script>
     document.addEventListener('DOMContentLoaded', function () {
+      // Mobile Navbar Toggle Functionality
+      const navbarToggler = document.querySelector('.navbar-toggler');
+      const navbarCollapse = document.querySelector('#navbarNav');
+      const navLinks = document.querySelectorAll('.nav-link');
+      const navbar = document.querySelector('.navbar');
+
+      // Check if elements exist
+      if (!navbarToggler || !navbarCollapse || !navLinks || !navbar) {
+          console.warn('Navbar elements not found.');
+          return;
+      }
+
+      // Set active link based on current page
+      const setActiveLink = () => {
+          const currentPath = window.location.pathname.split('/').pop() || 'index.html';
+          navLinks.forEach(link => {
+              const linkPath = link.getAttribute('href');
+              link.classList.toggle('active', linkPath === currentPath);
+          });
+      };
+
+      // Initialize active link
+      setActiveLink();
+
+      // Toggle navbar on mobile
+      navbarToggler.addEventListener('click', () => {
+          const isExpanded = navbarCollapse.classList.contains('show');
+          navbarCollapse.classList.toggle('show');
+          navbarToggler.setAttribute('aria-expanded', !isExpanded);
+      });
+
+      // Close mobile menu when a nav link is clicked
+      navLinks.forEach(link => {
+          link.addEventListener('click', () => {
+              if (navbarCollapse.classList.contains('show')) {
+                  navbarCollapse.classList.remove('show');
+                  navbarToggler.setAttribute('aria-expanded', 'false');
+              }
+          });
+      });
+
+      // Handle window resize to reset menu state
+      window.addEventListener('resize', () => {
+          if (window.innerWidth >= 992 && navbarCollapse.classList.contains('show')) {
+              navbarCollapse.classList.remove('show');
+              navbarToggler.setAttribute('aria-expanded', 'false');
+          }
+      });
+
+      // Accessibility: Close menu on Escape key
+      document.addEventListener('keydown', (e) => {
+          if (e.key === 'Escape' && navbarCollapse.classList.contains('show')) {
+              navbarCollapse.classList.remove('show');
+              navbarToggler.setAttribute('aria-expanded', 'false');
+              navbarToggler.focus();
+          }
+      });
+
+      // Welcome Modal Functionality
       const modalElement = document.getElementById('welcomeModal');
       if (!sessionStorage.getItem('welcomeModalShown') && modalElement) {
         const modal = new bootstrap.Modal(modalElement, {
@@ -560,7 +619,6 @@
           modal.show();
         }, 2000);
 
-        // Set sessionStorage when modal is closed
         modalElement.addEventListener('hidden.bs.modal', function () {
           sessionStorage.setItem('welcomeModalShown', 'true');
           document.querySelectorAll('.modal-backdrop').forEach(el => el.remove());
