add updated code

--- a/services.html
+++ b/services.html
@@ -249,7 +249,6 @@
       </div>
     </div>
   </section>
-
   <!-- Services Section -->
   <section class="py-5" id="web-services" aria-labelledby="web-services-heading">
     <div class="container">
@@ -260,9 +259,7 @@
         <!-- Service 1 -->
         <div class="col-md-6 col-lg-4">
           <div class="service-card text-center">
-            <div class="service-icon">
-              <i class="fas fa-code"></i>
-            </div>
+            <img src="images/webDesign.jpg" alt="Custom Web Design" class="mb-3 rounded" style="width:100%;max-width:180px;height:auto;object-fit:cover;">
             <h3 class="h5 fw-bold mb-3">Custom Web Design</h3>
             <p>Build a responsive, mobile-friendly website that reflects your brand and attracts local customers.</p>
           </div>
@@ -271,9 +268,7 @@
         <!-- Service 2 -->
         <div class="col-md-6 col-lg-4">
           <div class="service-card text-center">
-            <div class="service-icon">
-              <i class="fas fa-chart-line"></i>
-            </div>
+            <img src="images/seo.jpg" alt="SEO Optimization" class="mb-3 rounded" style="width:100%;max-width:180px;height:auto;object-fit:cover;">
             <h3 class="h5 fw-bold mb-3">SEO Optimization</h3>
             <p>Boost your Google rankings and drive more organic traffic with our proven SEO strategies.</p>
           </div>
@@ -282,9 +277,7 @@
         <!-- Service 3 -->
         <div class="col-md-6 col-lg-4">
           <div class="service-card text-center">
-            <div class="service-icon">
-              <i class="fas fa-tools"></i>
-            </div>
+            <img src="images/maintenance.jpg" alt="Ongoing Maintenance" class="mb-3 rounded" style="width:100%;max-width:180px;height:auto;object-fit:cover;">
             <h3 class="h5 fw-bold mb-3">Ongoing Maintenance</h3>
             <p>Keep your website secure and up-to-date with our reliable support and monitoring services.</p>
           </div>
@@ -293,9 +286,7 @@
         <!-- Service 4 -->
         <div class="col-md-6 col-lg-4">
           <div class="service-card text-center">
-            <div class="service-icon">
-              <i class="fas fa-chart-bar"></i>
-            </div>
+            <img src="images/solutions.jpg" alt="Business Intelligence" class="mb-3 rounded" style="width:100%;max-width:180px;height:auto;object-fit:cover;">
             <h3 class="h5 fw-bold mb-3">Business Intelligence</h3>
             <p>Leverage data-driven insights to make informed decisions and optimize your business strategies.</p>
           </div>
@@ -304,9 +295,7 @@
         <!-- Service 5 -->
         <div class="col-md-6 col-lg-4">
           <div class="service-card text-center">
-            <div class="service-icon">
-              <i class="fas fa-shield-alt"></i>
-            </div>
+            <img src="images/cyber.jpg" alt="Cybersecurity Assessment" class="mb-3 rounded" style="width:100%;max-width:180px;height:auto;object-fit:cover;">
             <h3 class="h5 fw-bold mb-3">Cybersecurity Assessment</h3>
             <p>Identify vulnerabilities and protect your business from potential cyber threats with our expert analysis.</p>
           </div>
@@ -315,9 +304,7 @@
         <!-- Service 6 -->
         <div class="col-md-6 col-lg-4">
           <div class="service-card text-center">
-            <div class="service-icon">
-              <i class="fas fa-hashtag"></i>
-            </div>
+            <img src="images/social.jpg" alt="Social Media Strategies" class="mb-3 rounded" style="width:100%;max-width:180px;height:auto;object-fit:cover;">
             <h3 class="h5 fw-bold mb-3">Social Media Strategies</h3>
             <p>Develop an initial social media plan to engage your audience and grow your online presence effectively.</p>
           </div>
@@ -379,7 +366,6 @@
       </div>
     </div>
   </section>
-
   <!-- Why Choose Us Section -->
   <section class="py-5" role="region" aria-labelledby="why-choose-us-heading">
     <div class="container">
@@ -387,23 +373,43 @@
       <p class="text-center lead mb-4">We're passionate about helping hardworking businesses succeed online. Here's what makes us different:</p>
       <div class="row g-4">
         <div class="col-md-6">
-          <div class="p-4 bg-light rounded shadow-sm h-100">
-            <strong>Expertise:</strong> Our team has years of hands-on experience in web design and digital marketing.
+          <div class="p-4 bg-light rounded shadow-sm h-100 d-flex align-items-center">
+            <span class="me-3" style="color:#3b82f6;">
+              <i class="fas fa-user-tie fa-2x" aria-hidden="true" title="Expertise"></i>
+            </span>
+            <span>
+              <strong>Expertise:</strong> Our team has years of hands-on experience in web design and digital marketing.
+            </span>
           </div>
         </div>
         <div class="col-md-6">
-          <div class="p-4 bg-light rounded shadow-sm h-100">
-            <strong>Customization:</strong> Every solution we provide is tailored to your specific goals and needs.
+          <div class="p-4 bg-light rounded shadow-sm h-100 d-flex align-items-center">
+            <span class="me-3" style="color:#3b82f6;">
+              <i class="fas fa-sliders-h fa-2x" aria-hidden="true" title="Customization"></i>
+            </span>
+            <span>
+              <strong>Customization:</strong> Every solution we provide is tailored to your specific goals and needs.
+            </span>
           </div>
         </div>
         <div class="col-md-6">
-          <div class="p-4 bg-light rounded shadow-sm h-100">
-            <strong>Support:</strong> We're here before, during, and after launch to help you grow.
+          <div class="p-4 bg-light rounded shadow-sm h-100 d-flex align-items-center">
+            <span class="me-3" style="color:#3b82f6;">
+              <i class="fas fa-headset fa-2x" aria-hidden="true" title="Support"></i>
+            </span>
+            <span>
+              <strong>Support:</strong> We're here before, during, and after launch to help you grow.
+            </span>
           </div>
         </div>
         <div class="col-md-6">
-          <div class="p-4 bg-light rounded shadow-sm h-100">
-            <strong>Results-Driven:</strong> We measure success by the results your website delivers.
+          <div class="p-4 bg-light rounded shadow-sm h-100 d-flex align-items-center">
+            <span class="me-3" style="color:#3b82f6;">
+              <i class="fas fa-chart-line fa-2x" aria-hidden="true" title="Results-Driven"></i>
+            </span>
+            <span>
+              <strong>Results-Driven:</strong> We measure success by the results your website delivers.
+            </span>
           </div>
         </div>
       </div>
