--- a/index.html
+++ b/index.html
@@ -307,29 +307,28 @@
       </div>
     </div>
   </section>
-
   <!-- Why Choose Us Section -->
-  <section class="py-5 bg-light" aria-labelledby="features-heading">
+  <section class="py-5" aria-labelledby="features-heading">
     <div class="container">
       <h2 id="features-heading" class="section-title text-center">Why Choose Us?</h2>
       <div class="row text-center">
         <div class="col-lg-4 mb-4">
-          <div class="feature-icon">
-            <i class="fas fa-mobile-alt"></i>
+          <div class="mb-4">
+            <img src="./images/mobile.jpg" alt="Mobile-First Design" class="img-fluid" style="width:180px; height:180px; object-fit:cover; border-radius:12px;">
           </div>
           <h3 class="h4 fw-semibold mb-3">Mobile-First Design</h3>
           <p class="text-muted">Our websites are optimized for mobile devices, ensuring your customers can reach you anywhere.</p>
         </div>
         <div class="col-lg-4 mb-4">
-          <div class="feature-icon">
-            <i class="fas fa-chart-line"></i>
+          <div class="mb-4">
+            <img src="./images/results.jpg" alt="Results-Driven" class="img-fluid" style="width:180px; height:180px; object-fit:cover; border-radius:12px;">
           </div>
           <h3 class="h4 fw-semibold mb-3">Results-Driven</h3>
           <p class="text-muted">We focus on creating websites that convert visitors into loyal customers.</p>
         </div>
         <div class="col-lg-4 mb-4">
-          <div class="feature-icon">
-            <i class="fas fa-tools"></i>
+          <div class="mb-4">
+            <img src="./images/solutions.jpg" alt="Tailored Solutions" class="img-fluid" style="width:180px; height:180px; object-fit:cover; border-radius:12px;">
           </div>
           <h3 class="h4 fw-semibold mb-3">Tailored Solutions</h3>
           <p class="text-muted">Every website we build is customized to meet the unique needs of your business.</p>
@@ -337,29 +336,28 @@
       </div>
     </div>
   </section>
-
   <!-- Our Process Section -->
   <section class="py-5" aria-labelledby="process-heading">
     <div class="container">
       <h2 id="process-heading" class="section-title text-center">Our Simple 3-Step Process</h2>
       <div class="row text-center">
         <div class="col-lg-4 mb-4">
-          <div class="feature-icon">
-            <i class="fas fa-comments"></i>
+          <div class="mb-4">
+            <img src="./images/discover.jpg" alt="Discover" class="img-fluid" style="width:180px; height:180px; object-fit:cover; border-radius:12px;">
           </div>
           <h3 class="h4 fw-semibold mb-3">1. Discover</h3>
           <p class="text-muted">We start by learning about your business, goals, and customers to create a clear project plan.</p>
         </div>
         <div class="col-lg-4 mb-4">
-          <div class="feature-icon">
-            <i class="fas fa-laptop-code"></i>
+          <div class="mb-4">
+            <img src="./images/design.jpg" alt="Design & Build" class="img-fluid" style="width:180px; height:180px; object-fit:cover; border-radius:12px;">
           </div>
           <h3 class="h4 fw-semibold mb-3">2. Design & Build</h3>
           <p class="text-muted">Our team designs a site that's fast, responsive, and built for conversions—completely tailored to you.</p>
         </div>
         <div class="col-lg-4 mb-4">
-          <div class="feature-icon">
-            <i class="fas fa-rocket"></i>
+          <div class="mb-4">
+            <img src="./images/webDesign.jpg" alt="Launch & Support" class="img-fluid" style="width:180px; height:180px; object-fit:cover; border-radius:12px;">
           </div>
           <h3 class="h4 fw-semibold mb-3">3. Launch & Support</h3>
           <p class="text-muted">Once your site goes live, we offer ongoing support to help you grow and stay ahead online.</p>
