add updated code

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
     </div>
   </section>
   <!-- Why Choose Us Section -->
-  <section class="py-5" aria-labelledby="features-heading">
+  <section class="py-5" aria-labelledby="features-heading" style="background-color: #ffe5e5;"></section>
     <div class="container">
       <h2 id="features-heading" class="section-title text-center">Why Choose Us?</h2>
       <div class="row text-center">
