--- a/services.html
+++ b/services.html
@@ -283,7 +283,16 @@
           </div>
         </div>
 
-        <!-- Service 4 -->
+        <!-- Service 4 - NEW PPC/Digital Advertising -->
+        <div class="col-md-6 col-lg-4">
+          <div class="service-card text-center">
+            <img src="images/digital-advertising.jpg" alt="PPC & Digital Advertising" class="mb-3 rounded" style="width:100%;max-width:180px;height:auto;object-fit:cover;">
+            <h3 class="h5 fw-bold mb-3">PPC & Digital Advertising</h3>
+            <p>Drive immediate results with targeted Google Ads and Facebook campaigns designed specifically for blue-collar businesses.</p>
+          </div>
+        </div>
+
+        <!-- Service 5 -->
         <div class="col-md-6 col-lg-4">
           <div class="service-card text-center">
             <img src="images/solutions.jpg" alt="Business Intelligence" class="mb-3 rounded" style="width:100%;max-width:180px;height:auto;object-fit:cover;">
@@ -292,7 +301,7 @@
           </div>
         </div>
 
-        <!-- Service 5 -->
+        <!-- Service 6 -->
         <div class="col-md-6 col-lg-4">
           <div class="service-card text-center">
             <img src="images/cyber.jpg" alt="Cybersecurity Assessment" class="mb-3 rounded" style="width:100%;max-width:180px;height:auto;object-fit:cover;">
@@ -301,7 +310,7 @@
           </div>
         </div>
 
-        <!-- Service 6 -->
+        <!-- Service 7 -->
         <div class="col-md-6 col-lg-4">
           <div class="service-card text-center">
             <img src="images/social.jpg" alt="Social Media Strategies" class="mb-3 rounded" style="width:100%;max-width:180px;height:auto;object-fit:cover;">
@@ -313,8 +322,101 @@
     </div>
   </section>
 
+  <!-- NEW SECTION: Detailed PPC Services -->
+  <section class="py-5 bg-light" aria-labelledby="ppc-services-heading">
+    <div class="container">
+      <h2 id="ppc-services-heading" class="section-title text-center">PPC & Digital Advertising Services</h2>
+      <p class="text-center lead mb-5">Get immediate visibility and qualified leads with our comprehensive digital advertising solutions.</p>
+      
+      <div class="row g-4">
+        <!-- Campaign Management -->
+        <div class="col-lg-6">
+          <div class="importance-card h-100">
+            <div class="d-flex align-items-center mb-3">
+              <div class="importance-icon me-3">
+                <i class="fas fa-bullhorn fa-2x" aria-hidden="true"></i>
+              </div>
+              <h3 class="h5 fw-bold mb-0">Campaign Setup & Management</h3>
+            </div>
+            <p class="mb-3">Create and manage Google Ads and Facebook campaigns specifically tailored for blue-collar businesses like plumbing, construction, and HVAC.</p>
+            <ul class="list-unstyled small text-muted">
+              <li class="mb-1"><i class="fas fa-check text-success me-2"></i>Lead generation focused campaigns</li>
+              <li class="mb-1"><i class="fas fa-check text-success me-2"></i>Brand awareness strategies</li>
+              <li class="mb-1"><i class="fas fa-check text-success me-2"></i>Local market targeting</li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- Keyword Strategy -->
+        <div class="col-lg-6">
+          <div class="importance-card h-100">
+            <div class="d-flex align-items-center mb-3">
+              <div class="importance-icon me-3">
+                <i class="fas fa-search fa-2x" aria-hidden="true"></i>
+              </div>
+              <h3 class="h5 fw-bold mb-0">Keyword Strategy & Management</h3>
+            </div>
+            <p class="mb-3">Target the right customers with strategic keyword research and bid management for maximum ROI.</p>
+            <ul class="list-unstyled small text-muted">
+              <li class="mb-1"><i class="fas fa-check text-success me-2"></i>High-impact keyword recommendations</li>
+              <li class="mb-1"><i class="fas fa-check text-success me-2"></i>Local search optimization</li>
+              <li class="mb-1"><i class="fas fa-check text-success me-2"></i>Competitive bid monitoring</li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- Analytics & Reporting -->
+        <div class="col-lg-6">
+          <div class="importance-card h-100">
+            <div class="d-flex align-items-center mb-3">
+              <div class="importance-icon me-3">
+                <i class="fas fa-chart-bar fa-2x" aria-hidden="true"></i>
+              </div>
+              <h3 class="h5 fw-bold mb-0">Data Analysis & Reporting</h3>
+            </div>
+            <p class="mb-3">Clear, actionable insights delivered through comprehensive weekly and monthly reports.</p>
+            <ul class="list-unstyled small text-muted">
+              <li class="mb-1"><i class="fas fa-check text-success me-2"></i>Google Analytics integration</li>
+              <li class="mb-1"><i class="fas fa-check text-success me-2"></i>ROI tracking and optimization</li>
+              <li class="mb-1"><i class="fas fa-check text-success me-2"></i>Performance dashboards</li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- Creative Content -->
+        <div class="col-lg-6">
+          <div class="importance-card h-100">
+            <div class="d-flex align-items-center mb-3">
+              <div class="importance-icon me-3">
+                <i class="fas fa-pencil-alt fa-2x" aria-hidden="true"></i>
+              </div>
+              <h3 class="h5 fw-bold mb-0">Creative Content Development</h3>
+            </div>
+            <p class="mb-3">Compelling ad copy and visuals that resonate with blue-collar audiences and drive conversions.</p>
+            <ul class="list-unstyled small text-muted">
+              <li class="mb-1"><i class="fas fa-check text-success me-2"></i>Industry-specific messaging</li>
+              <li class="mb-1"><i class="fas fa-check text-success me-2"></i>Trust-building copy</li>
+              <li class="mb-1"><i class="fas fa-check text-success me-2"></i>Local service emphasis</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <!-- Call to Action -->
+      <div class="row mt-5">
+        <div class="col-12 text-center">
+          <div class="bg-primary text-white p-4 rounded">
+            <h3 class="h4 fw-bold mb-3">Ready to Drive More Leads?</h3>
+            <p class="mb-3">Our PPC specialists have experience managing campaigns for service-based businesses just like yours.</p>
+            <a href="contact.html" class="btn btn-light btn-lg">Get Your Free Campaign Audit</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Importance of Services Section -->
-  <section class="py-5 bg-light" role="region" aria-labelledby="importance-of-services-heading">
+  <section class="py-5" role="region" aria-labelledby="importance-of-services-heading">
     <div class="container">
       <h2 id="importance-of-services-heading" class="section-title text-center">Why Our Services Are Essential</h2>
       <p class="text-center lead mb-5">A powerful online presence drives your Louisiana business forward. Here's how we make it happen:</p>
@@ -342,7 +444,18 @@
           </div>
         </div>
 
-        <!-- Card 3: Maintenance -->
+        <!-- Card 3: PPC - NEW -->
+        <div class="col-md-6 col-lg-3">
+          <div class="importance-card text-center">
+            <div class="importance-icon mb-3">
+              <i class="fas fa-bullhorn fa-3x" aria-hidden="true"></i>
+            </div>
+            <h3 class="h5 fw-bold">Paid Advertising</h3>
+            <p>Get immediate visibility and qualified leads with targeted Google and Facebook campaigns.</p>
+          </div>
+        </div>
+
+        <!-- Card 4: Maintenance -->
         <div class="col-md-6 col-lg-3">
           <div class="importance-card text-center">
             <div class="importance-icon mb-3">
@@ -352,63 +465,53 @@
             <p>Keep your site secure, updated, and running smoothly with ongoing support.</p>
           </div>
         </div>
-
-        <!-- Card 4: Socials -->
-        <div class="col-md-6 col-lg-3">
-          <div class="importance-card text-center">
-            <div class="importance-icon mb-3">
-              <i class="fas fa-users fa-3x" aria-hidden="true"></i>
-            </div>
-            <h3 class="h5 fw-bold">Social Media</h3>
-            <p>Engage your audience and expand your reach with compelling social content.</p>
-          </div>
-        </div>
       </div>
     </div>
   </section>
+
   <!-- Why Choose Us Section -->
-  <section class="py-5" role="region" aria-labelledby="why-choose-us-heading">
+  <section class="py-5 bg-light" role="region" aria-labelledby="why-choose-us-heading">
     <div class="container">
       <h2 id="why-choose-us-heading" class="section-title text-center">Why Choose Us?</h2>
       <p class="text-center lead mb-4">We're passionate about helping hardworking businesses succeed online. Here's what makes us different:</p>
       <div class="row g-4">
         <div class="col-md-6">
-          <div class="p-4 bg-light rounded shadow-sm h-100 d-flex align-items-center">
+          <div class="p-4 bg-white rounded shadow-sm h-100 d-flex align-items-center">
             <span class="me-3" style="color:#3b82f6;">
               <i class="fas fa-user-tie fa-2x" aria-hidden="true" title="Expertise"></i>
             </span>
             <span>
-              <strong>Expertise:</strong> Our team has years of hands-on experience in web design and digital marketing.
+              <strong>Expertise:</strong> Our team has years of hands-on experience in web design, digital marketing, and PPC campaign management.
             </span>
           </div>
         </div>
         <div class="col-md-6">
-          <div class="p-4 bg-light rounded shadow-sm h-100 d-flex align-items-center">
+          <div class="p-4 bg-white rounded shadow-sm h-100 d-flex align-items-center">
             <span class="me-3" style="color:#3b82f6;">
               <i class="fas fa-sliders-h fa-2x" aria-hidden="true" title="Customization"></i>
             </span>
             <span>
-              <strong>Customization:</strong> Every solution we provide is tailored to your specific goals and needs.
+              <strong>Customization:</strong> Every solution we provide is tailored to your specific goals and industry needs.
             </span>
           </div>
         </div>
         <div class="col-md-6">
-          <div class="p-4 bg-light rounded shadow-sm h-100 d-flex align-items-center">
+          <div class="p-4 bg-white rounded shadow-sm h-100 d-flex align-items-center">
             <span class="me-3" style="color:#3b82f6;">
               <i class="fas fa-headset fa-2x" aria-hidden="true" title="Support"></i>
             </span>
             <span>
-              <strong>Support:</strong> We're here before, during, and after launch to help you grow.
+              <strong>Support:</strong> We're here before, during, and after launch to help you grow and optimize performance.
             </span>
           </div>
         </div>
         <div class="col-md-6">
-          <div class="p-4 bg-light rounded shadow-sm h-100 d-flex align-items-center">
+          <div class="p-4 bg-white rounded shadow-sm h-100 d-flex align-items-center">
             <span class="me-3" style="color:#3b82f6;">
               <i class="fas fa-chart-line fa-2x" aria-hidden="true" title="Results-Driven"></i>
             </span>
             <span>
-              <strong>Results-Driven:</strong> We measure success by the results your website delivers.
+              <strong>Results-Driven:</strong> We measure success by the leads, traffic, and ROI your campaigns deliver.
             </span>
           </div>
         </div>
